--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,108 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'roboto';
 }
 
+/*--------------NAVBAR-------------*/
+.navbar{
+    background: rgb(250, 81, 208);
+    position: fixed;
+    z-index: 5;
+    width: 100%;
+    transition: all 0.3s ease;
+    padding: 25px 0;
+}
+
+.navbar.sticky{
+    background: red;
+    padding: 10px 0;
+}
+
+.navbar .content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .menu-list{
+    display: inline-flex;
+}
+
+.navbar .logo a{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.menu-list li a{
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 25px;
+    transition: all 0.3s ease;
+}
+
+.menu-list li a:hover{
+    color: rgb(0, 0, 0);
+}
+
+.menu-list li{
+    list-style: none;
+}
+
+.content{
+    max-width: 1250px;
+    margin: auto;
+    padding: 0px 30px;
+}
+
+.icon{
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+}
+
+.cancel-btn{
+    position: absolute;
+    right: 30px;
+    top: 20px;
+}
+
+/*-----------MEDIA QUERIES----------*/
+
+@media (max-width: 868px) {
+    /*----NAVBAR----*/
+    .navbar .menu-list{
+        position: fixed;
+        top: 0;
+        left: -100%;
+        height: 100vh;
+        width: 100%;
+        max-width: 400px;
+        background: rgb(238, 83, 199);
+        display: block;
+        padding: 40px 0;
+        text-align: center;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu-list.active{
+        left: 0%;
+    }
+    .navbar .menu-list li{
+        margin-top: 45px;
+    }
+    .navbar .menu-list li a{
+        font-size: 23px;
+    }
+    /*-----ICON-----*/
+    .icon{
+        display: block;
+    }
+    .icon.hide{
+        display: none;
+    }
+}
