--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Inicio</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>Candyman | Inicio</title>
 </head>
-<body>
-<p>Holaaa</p>
 
+<body>
+<!---------------------------NAVBAR--------------------------->
+
+<nav class="navbar">
+    <div class="content">
+        <div class="logo"><a href="#">Candyman</a></div>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <i class="fas fa-times"></i>
+            </div>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Carrito de Compras</a></li>
+            <li><a href="#">Lista de Deseos</a></li>
+            <li><a href="#">Login</a></li>
+        </ul>
+        <div class="icon menu-btn">
+            <i class="fas fa-bars"></i>
+        </div>
+    </div>
+</nav>
+
+
+<script src="/javascript/navbar.js"></script>
 </body>
 </html>
